--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,9 +10,11 @@ body {
   font-family: 'Plus Jakarta Sans', sans-serif;
   overflow: hidden;
   overflow-y: auto;
+  color: #1c3c50;
 }
 
 button {
+  color: #1c3c50;
   background: none;
   border: none;
   cursor: pointer;
